Added the design of addressbook form page

--- a/pages/addressBookForm.html
+++ b/pages/addressBookForm.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header-content header">
         <div class="logo-content">
-            <img class="logo-content-img" src="../assets/images/logo.png" alt="image here">
+            <img class="logo-content-img" src="../assets/images/logo.png" alt="">
             <div>
                 <span class="emp-text">ADDRESS</span><br>
                 <span class="emp-text emp-payroll">BOOK</span>
@@ -25,6 +25,7 @@
         <form class="form" action="#" onsubmit="save(); return false">
             <div class="form-head">
                 ADDRESS BOOK FORM
+                <img class="logo-content-img-head" src="../assets/images/cancel.jpeg" alt="">
             </div>
             <div class="row-content">
                 <label class="label text" for="name">Name</label>
@@ -42,7 +43,7 @@
             <div class="row-content">
                 <label class="label text" for="address">Address</label>
                 <textarea id="address" class="input" name="address" placeholder="Your complete address..."
-                    style="height:100px"></textarea>
+                    style="height:100px" required></textarea>
                 <address-error-output class="address-text-error" for="text"></address-error-output>
                 <address-error-output class="address-text-error-new" for="text"></address-error-output>
             </div>
@@ -56,14 +57,14 @@
                 </div>
 
                 <div id="cityAndState">
-                    <select id="city" name="City">
+                    <select id="city" name="City" required>
                         <option value="" disabled selected>Select city</option>
                         <option value="Mumbai">Mumbai</option>
                         <option value="Pune">Pune</option>
                         <option value="Bangalore">Bangalore</option>
                         <option value="Bangalore">Indore</option>
                     </select>
-                    <select id="state" name="State">
+                    <select id="state" name="State" required>
                         <option value="" disabled selected>Select state</option>
                         <option value="Maharashtra">Maharashtra</option>
                         <option value="Karnataka">Karnataka</option>
