--- a/pages/addressBookForm.html
+++ b/pages/addressBookForm.html
@@ -25,7 +25,7 @@
         <form class="form" action="#" onsubmit="save(); return false">
             <div class="form-head">
                 ADDRESS BOOK FORM
-                <img class="logo-content-img-head" src="../assets/images/cancel.jpeg" alt="">
+                <a href="../pages/addressBookHome.html"><img class="logo-content-img-head" src="../assets/images/cancel.jpeg" alt=""></a>
             </div>
             <div class="row-content">
                 <label class="label text" for="name">Name</label>
